[package]
name = "planet-bevy"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Barusseau"]
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = [
    "bevy/dynamic",
]

[dependencies]
anyhow = "1.0.66"
bevy = { version = "0.9.0", default-features = false, features = ["bevy_asset", "bevy_winit", "render", "png"] }
bevy_asset = { version = "0.9.0", features = ["filesystem_watcher"] }
bevy_asset_loader = "0.14.1"
bevy_editor_pls = "0.2.0"
bevy_egui = "0.17.1"
bevy_mod_picking = "0.10.0"
bevy_rapier2d = { version = "0.19.0", features = ["simd-stable", "debug-render"] }
image = { version = "0.24", default-features = false }
iyes_loopless = "0.9.1"
rand = "0.8.5"
winit = { version = "0.27.5", default-features = false }
